language/move-lang/tests/move_check/parser/use_with_module.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_with_module.move:2:1
  │
2 │ use 0x1::Module;
  │ ^^^ Invalid code unit. Expected 'address', 'module', or 'script'. Got 'use'

